// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/EditChannelSettings should match snapshot 1`] = `
<form
  role="form"
>
  <div
    className="margin-bottom x3 text-center"
  >
    <h2>
      Add Jira Subscription
    </h2>
  </div>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "color": "#3d3c40",
        "padding": "2em 0",
      }
    }
  >
    <div
      className="container-fluid"
    >
      <Input
        addValidate={[Function]}
        label="Subscription Name"
        maxLength={100}
        onChange={[Function]}
        placeholder="Name"
        readOnly={false}
        removeValidate={[Function]}
        required={true}
        type="input"
        value="SubTestName"
      />
    </div>
    <div
      className="container-fluid"
    >
      <ReactSelectSetting
        addValidate={[Function]}
        isMulti={false}
        label="Project"
        limitOptions={true}
        name="projects"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "DKH-Project",
              "value": "DP",
            },
            Object {
              "label": "Issue Dialog Testing",
              "value": "IDT",
            },
            Object {
              "label": "Koch Testing",
              "value": "KT",
            },
            Object {
              "label": "LEV-test",
              "value": "LT",
            },
            Object {
              "label": "restricted",
              "value": "RES",
            },
            Object {
              "label": "scrum1",
              "value": "SCRUM1",
            },
            Object {
              "label": "Testing Extensions",
              "value": "EXT",
            },
          ]
        }
        removeValidate={[Function]}
        required={true}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        value={
          Array [
            Object {
              "label": "Koch Testing",
              "value": "KT",
            },
          ]
        }
      />
      <Loading
        position="relative"
        style={Object {}}
      />
    </div>
    <ConfirmModal
      cancelButtonText="Cancel"
      confirmButtonClass="btn btn-danger"
      confirmButtonText="Delete"
      hideCancel={false}
      message="Delete Subscription \\"SubTestName\\"?"
      onCancel={[Function]}
      onConfirm={[Function]}
      show={false}
      title="Subscription"
    />
  </div>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
    style={
      Object {
        "padding": "2rem 15px",
      }
    }
  >
    <FormButton
      btnClass="btn-danger pull-left"
      defaultMessage="Delete"
      disabled={false}
      extraClasses=""
      id="jira-delete-subscription"
      onClick={[Function]}
      savingMessage="Creating"
      type="button"
    />
    <FormButton
      btnClass="btn-link"
      defaultMessage="Cancel"
      disabled={false}
      extraClasses=""
      onClick={[Function]}
      savingMessage="Creating"
      type="button"
    />
    <FormButton
      btnClass="btn-primary"
      defaultMessage="Set Subscription"
      disabled={false}
      extraClasses=""
      onClick={[Function]}
      saving={false}
      savingMessage="Setting"
      type="button"
    />
  </ModalFooter>
</form>
`;

exports[`components/EditChannelSettings should match snapshot with no issue metadata 1`] = `
<form
  role="form"
>
  <div
    className="margin-bottom x3 text-center"
  >
    <h2>
      Add Jira Subscription
    </h2>
  </div>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "color": "#3d3c40",
        "padding": "2em 0",
      }
    }
  >
    <div
      className="container-fluid"
    >
      <Input
        addValidate={[Function]}
        label="Subscription Name"
        maxLength={100}
        onChange={[Function]}
        placeholder="Name"
        readOnly={false}
        removeValidate={[Function]}
        required={true}
        type="input"
        value="SubTestName"
      />
    </div>
    <div
      className="container-fluid"
    >
      <ReactSelectSetting
        addValidate={[Function]}
        isMulti={false}
        label="Project"
        limitOptions={true}
        name="projects"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "DKH-Project",
              "value": "DP",
            },
            Object {
              "label": "Issue Dialog Testing",
              "value": "IDT",
            },
            Object {
              "label": "Koch Testing",
              "value": "KT",
            },
            Object {
              "label": "LEV-test",
              "value": "LT",
            },
            Object {
              "label": "restricted",
              "value": "RES",
            },
            Object {
              "label": "scrum1",
              "value": "SCRUM1",
            },
            Object {
              "label": "Testing Extensions",
              "value": "EXT",
            },
          ]
        }
        removeValidate={[Function]}
        required={true}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        value={
          Array [
            Object {
              "label": "Koch Testing",
              "value": "KT",
            },
          ]
        }
      />
      <Loading
        position="relative"
        style={Object {}}
      />
    </div>
    <ConfirmModal
      cancelButtonText="Cancel"
      confirmButtonClass="btn btn-danger"
      confirmButtonText="Delete"
      hideCancel={false}
      message="Delete Subscription \\"SubTestName\\"?"
      onCancel={[Function]}
      onConfirm={[Function]}
      show={false}
      title="Subscription"
    />
  </div>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
    style={
      Object {
        "padding": "2rem 15px",
      }
    }
  >
    <FormButton
      btnClass="btn-danger pull-left"
      defaultMessage="Delete"
      disabled={false}
      extraClasses=""
      id="jira-delete-subscription"
      onClick={[Function]}
      savingMessage="Creating"
      type="button"
    />
    <FormButton
      btnClass="btn-link"
      defaultMessage="Cancel"
      disabled={false}
      extraClasses=""
      onClick={[Function]}
      savingMessage="Creating"
      type="button"
    />
    <FormButton
      btnClass="btn-primary"
      defaultMessage="Set Subscription"
      disabled={false}
      extraClasses=""
      onClick={[Function]}
      saving={false}
      savingMessage="Setting"
      type="button"
    />
  </ModalFooter>
</form>
`;

exports[`components/EditChannelSettings should match snapshot with no subscriptions 1`] = `
<form
  role="form"
>
  <div
    className="margin-bottom x3 text-center"
  >
    <h2>
      Add Jira Subscription
    </h2>
  </div>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "color": "#3d3c40",
        "padding": "2em 0",
      }
    }
  >
    <div
      className="container-fluid"
    >
      <Input
        addValidate={[Function]}
        label="Subscription Name"
        maxLength={100}
        onChange={[Function]}
        placeholder="Name"
        readOnly={false}
        removeValidate={[Function]}
        required={true}
        type="input"
        value={null}
      />
    </div>
    <div
      className="container-fluid"
    >
      <ReactSelectSetting
        addValidate={[Function]}
        isMulti={false}
        label="Project"
        limitOptions={true}
        name="projects"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "DKH-Project",
              "value": "DP",
            },
            Object {
              "label": "Issue Dialog Testing",
              "value": "IDT",
            },
            Object {
              "label": "Koch Testing",
              "value": "KT",
            },
            Object {
              "label": "LEV-test",
              "value": "LT",
            },
            Object {
              "label": "restricted",
              "value": "RES",
            },
            Object {
              "label": "scrum1",
              "value": "SCRUM1",
            },
            Object {
              "label": "Testing Extensions",
              "value": "EXT",
            },
          ]
        }
        removeValidate={[Function]}
        required={true}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        value={Array []}
      />
    </div>
  </div>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
    style={
      Object {
        "padding": "2rem 15px",
      }
    }
  >
    <FormButton
      btnClass="btn-danger pull-left"
      defaultMessage="Delete"
      disabled={true}
      extraClasses=""
      id="jira-delete-subscription"
      onClick={[Function]}
      savingMessage="Creating"
      type="button"
    />
    <FormButton
      btnClass="btn-link"
      defaultMessage="Cancel"
      disabled={false}
      extraClasses=""
      onClick={[Function]}
      savingMessage="Creating"
      type="button"
    />
    <FormButton
      btnClass="btn-primary"
      defaultMessage="Set Subscription"
      disabled={true}
      extraClasses=""
      onClick={[Function]}
      saving={false}
      savingMessage="Setting"
      type="button"
    />
  </ModalFooter>
</form>
`;

exports[`components/EditChannelSettings should produce subscription error when add conflicting issue type 1`] = `
<form
  role="form"
>
  <div
    className="margin-bottom x3 text-center"
  >
    <h2>
      Add Jira Subscription
    </h2>
  </div>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "color": "#3d3c40",
        "padding": "2em 0",
      }
    }
  >
    <div
      className="container-fluid"
    >
      <Input
        addValidate={[Function]}
        label="Subscription Name"
        maxLength={100}
        onChange={[Function]}
        placeholder="Name"
        readOnly={false}
        removeValidate={[Function]}
        required={true}
        type="input"
        value="SubTestName"
      />
    </div>
    <div
      className="container-fluid"
    >
      <ReactSelectSetting
        addValidate={[Function]}
        isMulti={false}
        label="Project"
        limitOptions={true}
        name="projects"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "DKH-Project",
              "value": "DP",
            },
            Object {
              "label": "Issue Dialog Testing",
              "value": "IDT",
            },
            Object {
              "label": "Koch Testing",
              "value": "KT",
            },
            Object {
              "label": "LEV-test",
              "value": "LT",
            },
            Object {
              "label": "restricted",
              "value": "RES",
            },
            Object {
              "label": "scrum1",
              "value": "SCRUM1",
            },
            Object {
              "label": "Testing Extensions",
              "value": "EXT",
            },
          ]
        }
        removeValidate={[Function]}
        required={true}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        value={
          Array [
            Object {
              "label": "Koch Testing",
              "value": "KT",
            },
          ]
        }
      />
      <Loading
        position="relative"
        style={Object {}}
      />
    </div>
    <ConfirmModal
      cancelButtonText="Cancel"
      confirmButtonClass="btn btn-danger"
      confirmButtonText="Delete"
      hideCancel={false}
      message="Delete Subscription \\"SubTestName\\"?"
      onCancel={[Function]}
      onConfirm={[Function]}
      show={false}
      title="Subscription"
    />
  </div>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
    style={
      Object {
        "padding": "2rem 15px",
      }
    }
  >
    <FormButton
      btnClass="btn-danger pull-left"
      defaultMessage="Delete"
      disabled={false}
      extraClasses=""
      id="jira-delete-subscription"
      onClick={[Function]}
      savingMessage="Creating"
      type="button"
    />
    <FormButton
      btnClass="btn-link"
      defaultMessage="Cancel"
      disabled={false}
      extraClasses=""
      onClick={[Function]}
      savingMessage="Creating"
      type="button"
    />
    <FormButton
      btnClass="btn-primary"
      defaultMessage="Set Subscription"
      disabled={false}
      extraClasses=""
      onClick={[Function]}
      saving={false}
      savingMessage="Setting"
      type="button"
    />
  </ModalFooter>
</form>
`;
